--- a/trunk/miscore/src/main/resources/log4j.properties
+++ b/trunk/miscore/src/main/resources/log4j.properties
@@ -1,28 +1,30 @@
-    # Local
-     log4j.rootLogger=INFO, LOCAL, CONSOLE
+    ## Local
+    log4j.rootLogger=INFO, CONSOLE
+    #log4j.rootLogger=ERROR, LOCAL, CONSOLE
 
-    # In Tomcat
-#    log4j.rootLogger=ERROR, TOMCAT
+    ## In Tomcat
+    #log4j.rootLogger=ERROR, TOMCAT
 
-#    log4j.logger.uk.ac.ebi.enfin.mi.score=WARN
 
     log4j.additivity.uk.ac.ebi.enfin=false
 
-    # LOCAL is set to be a RollingFileAppender.
+    ## LOCAL is set to be a RollingFileAppender.
     log4j.appender.LOCAL=org.apache.log4j.RollingFileAppender
-    log4j.appender.LOCAL.File=enfin-miscore.log
+    log4j.appender.LOCAL.File=miscore.log
     log4j.appender.LOCAL.layout=org.apache.log4j.PatternLayout
     log4j.appender.LOCAL.layout.ConversionPattern=%d{yyyy-MM-dd@HH:mm} %-5p (%13F:%L) %3x - %m%n
     log4j.appender.LOCAL.MaxFileSize=100KB
     log4j.appender.LOCAL.MaxBackupIndex=1
 
-    # CONSOLE is set to be a ConsoleAppender.
+    ## CONSOLE is set to be a ConsoleAppender.
     log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
     log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
     log4j.appender.CONSOLE.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
 
-    # TOMCAT is set to be a RollingFileAppender.
+    ## TOMCAT is set to be a RollingFileAppender.
     log4j.appender.TOMCAT=org.apache.log4j.RollingFileAppender
-    log4j.appender.TOMCAT.File=${catalina.base}/logs/enfin-miscore.log
+    log4j.appender.TOMCAT.File=${catalina.base}/logs/miscore.log
     log4j.appender.TOMCAT.layout=org.apache.log4j.PatternLayout
     log4j.appender.TOMCAT.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
+    log4j.appender.TOMCAT.MaxFileSize=100KB
+    log4j.appender.TOMCAT.MaxBackupIndex=1
