--- a/trunk/miscore/pom.xml
+++ b/trunk/miscore/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.enfin.mi.score</groupId>
     <artifactId>miscore</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.2</version>
     <name>Molecular Interactions Score</name>
 
     <scm>
