--- a/trunk/miscore/pom.xml
+++ b/trunk/miscore/pom.xml
@@ -14,6 +14,16 @@
 
     <build>
         <plugins>
+            <!-- To compile with JDK5.0 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+
             <!-- This plugin creates a javadoc jar for pride-web. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
