--- a/trunk/miscore/src/main/resources/log4j.properties
+++ b/trunk/miscore/src/main/resources/log4j.properties
@@ -1,9 +1,8 @@
     ## Local
-    log4j.rootLogger=INFO, CONSOLE
-    #log4j.rootLogger=ERROR, LOCAL, CONSOLE
+    #log4j.rootLogger=DEBUG, CONSOLE
 
     ## In Tomcat
-    #log4j.rootLogger=ERROR, TOMCAT
+    log4j.rootLogger=WARN, TOMCAT
 
 
     log4j.additivity.uk.ac.ebi.enfin=false
