Add option to use a local json MI ontology file. By default it queries OLS as it did before.

--- a/miscore/src/main/resources/log4j.properties
+++ b/miscore/src/main/resources/log4j.properties
@@ -1,9 +1,9 @@
     ## Local
-    log4j.rootLogger=WARN, CONSOLE
+    log4j.rootLogger=ERROR, CONSOLE, TOMCAT
 #    log4j.rootLogger=DEBUG, CONSOLE
 
     ## In Tomcat
-    #log4j.rootLogger=WARN, TOMCAT
+    #log4j.rootLogger=ERROR, TOMCAT
 
 
     log4j.additivity.uk.ac.ebi.enfin=false
