--- a/trunk/miscore/pom.xml
+++ b/trunk/miscore/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.enfin.mi.score</groupId>
     <artifactId>miscore</artifactId>
-    <version>1.3.5-SNAPSHOT</version>
+    <version>1.3.5</version>
     <name>Molecular Interactions Score</name>
 
     <scm>
-        <connection>scm:svn:https://enfin-core.googlecode.com/svn/trunk/enfin-core/miscore</connection>
-        <developerConnection>scm:svn:https://enfin-core.googlecode.com/svn/trunk/enfin-core/miscore</developerConnection>
-        <url>http://code.google.com/p/enfin-core/source/browse/trunk/enfin-core/miscore</url>
+        <connection>scm:svn:https://enfin-core.googlecode.com/svn/tags/miscore-1.3.5</connection>
+        <developerConnection>scm:svn:https://enfin-core.googlecode.com/svn/tags/miscore-1.3.5</developerConnection>
+        <url>http://code.google.com/p/enfin-core/source/browse/tags/miscore-1.3.5</url>
     </scm>
 
     <build>
