--- a/miscore/pom.xml
+++ b/miscore/pom.xml
@@ -3,14 +3,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.enfin.mi.score</groupId>
     <artifactId>miscore</artifactId>
-    <version>1.3.6-SNAPSHOT</version>
+    <version>1.3.7-SNAPSHOT</version>
     <name>Molecular Interactions Score</name>
 
     <scm>
-        <connection>scm:svn:https://miscore.googlecode.com/svn/trunk/miscore/</connection>
-        <developerConnection>scm:svn:https://miscore.googlecode.com/svn/trunk/miscore/</developerConnection>
-        <url>https://miscore.googlecode.com/svn/trunk/miscore/</url>
+        <connection>scm:git:https://github.com/EBI-IntAct/miscore/</connection>
+        <developerConnection>scm:git:https://github.com/EBI-IntAct/miscore/</developerConnection>
+        <url>https://github.com/EBI-IntAct/miscore/</url>
     </scm>
+
+
+
 
     <build>
         <plugins>
@@ -19,8 +22,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
 
@@ -39,6 +42,7 @@
                         <configuration>
                             <outputDirectory>${project.build.directory}/miscore/api</outputDirectory>
                             <reportOutputDirectory>${project.build.directory}/miscore/api</reportOutputDirectory>
+
                         </configuration>
                     </execution>
                 </executions>
@@ -46,14 +50,6 @@
 
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>intact.nexus</id>
-            <name>IntAct Nexus</name>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <!-- logging dependency -->
@@ -77,15 +73,44 @@
 
     </dependencies>
 
-    <distributionManagement>
+    <repositories>
         <repository>
-            <id>ebi-repo</id>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo</url>
+            <id>intact.nexus</id>
+            <name>IntAct Nexus</name>
+            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
         </repository>
+        <repository>
+            <id>nexus-ebi-release-repo</id>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
+        </repository>
+        <repository>
+            <id>nexus-ebi-snapshot-repo</id>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
+        </repository>
+    </repositories>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>intact.nexus</id>
+            <name>IntAct Nexus</name>
+            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
+        </pluginRepository>
+
+    </pluginRepositories>
+
+    <distributionManagement>
+        <!-- EBI repo -->
+        <repository>
+            <id>pst-release</id>
+            <name>EBI Nexus Repository</name>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
+        </repository>
+        <!-- EBI SNAPSHOT repo -->
         <snapshotRepository>
-            <id>ebi-repo-snapshots</id>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+            <id>pst-snapshots</id>
+            <name>EBI Nexus Snapshots Repository</name>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
