--- a/miscore/pom.xml
+++ b/miscore/pom.xml
@@ -3,14 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.enfin.mi.score</groupId>
     <artifactId>miscore</artifactId>
-    <version>1.3.7-SNAPSHOT</version>
+    <version>1.3.8-SNAPSHOT</version>
     <name>Molecular Interactions Score</name>
 
     <scm>
         <connection>scm:git:https://github.com/EBI-IntAct/miscore/</connection>
         <developerConnection>scm:git:https://github.com/EBI-IntAct/miscore/</developerConnection>
         <url>https://github.com/EBI-IntAct/miscore/</url>
-    </scm>
+      <tag>HEAD</tag>
+  </scm>
 
 
 
