to make mvn release plugin work

--- a/miscore/pom.xml
+++ b/miscore/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.enfin.mi.score</groupId>
     <artifactId>miscore</artifactId>
@@ -10,10 +11,8 @@
         <connection>scm:git:https://github.com/EBI-IntAct/miscore/</connection>
         <developerConnection>scm:git:https://github.com/EBI-IntAct/miscore/</developerConnection>
         <url>https://github.com/EBI-IntAct/miscore/</url>
-      <tag>HEAD</tag>
-  </scm>
-
-
+        <tag>HEAD</tag>
+    </scm>
 
 
     <build>
@@ -47,6 +46,16 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <remoteTagging>true</remoteTagging>
+                    <goals>deploy</goals>
+                </configuration>
             </plugin>
 
         </plugins>
