--- a/miscore/pom.xml
+++ b/miscore/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.enfin.mi.score</groupId>
     <artifactId>miscore</artifactId>
-    <version>1.3.9-SNAPSHOT</version>
+    <version>1.3.9</version>
     <name>Molecular Interactions Score</name>
 
     <scm>
         <connection>scm:git:https://github.com/EBI-IntAct/miscore/</connection>
         <developerConnection>scm:git:https://github.com/EBI-IntAct/miscore/</developerConnection>
         <url>https://github.com/EBI-IntAct/miscore/</url>
-        <tag>HEAD</tag>
+        <tag>miscore-1.3.9</tag>
     </scm>
 
 
