--- a/miscore/pom.xml
+++ b/miscore/pom.xml
@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.ebi.enfin.mi.score</groupId>
     <artifactId>miscore</artifactId>
-    <version>1.3.9</version>
+    <version>1.3.10-SNAPSHOT</version>
     <name>Molecular Interactions Score</name>
 
     <scm>
         <connection>scm:git:https://github.com/EBI-IntAct/miscore/</connection>
         <developerConnection>scm:git:https://github.com/EBI-IntAct/miscore/</developerConnection>
         <url>https://github.com/EBI-IntAct/miscore/</url>
-        <tag>miscore-1.3.9</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
