allowing untracked in jgit flow

--- a/miscore/pom.xml
+++ b/miscore/pom.xml
@@ -75,6 +75,7 @@
                     </flowInitContext>
                     <!--Need to allow snapshot because of primefaces-->
                     <allowSnapshots>true</allowSnapshots>
+                    <allowUntracked>true</allowUntracked>
                     <!--<noDeploy>true</noDeploy>-->
                 </configuration>
             </plugin>
