--- a/miscore/pom.xml
+++ b/miscore/pom.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>uk.ac.ebi.enfin.mi.score</groupId>
+    <parent>
+        <groupId>uk.ac.ebi.enfin.mi.score</groupId>
+        <artifactId>miscore-parent</artifactId>
+        <version>1.4.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>miscore</artifactId>
-    <version>1.3.15-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <properties>
+        <junit.version>4.13.2</junit.version>
+        <jackson.version>2.13.3</jackson.version>
+
+        <path.to.exclude>**uk/ac/ebi/enfin/mi/score/local/*.java</path.to.exclude>
+    </properties>
     <name>Molecular Interactions Score</name>
 
     <scm>
@@ -13,16 +26,82 @@
         <tag>HEAD</tag>
     </scm>
 
+    <profiles> <!-- Avoid polluting the library with the json-generation -->
+        <profile>
+            <id>json-generation</id>
+
+            <properties>
+                <ols-client.version>2.13</ols-client.version>
+                <lombok.version>1.18.24</lombok.version>
+                <path.to.exclude>NO_PATH</path.to.exclude>
+            </properties>
+
+            <dependencies>
+                <dependency>
+                    <groupId>uk.ac.ebi.pride.utilities</groupId>
+                    <artifactId>ols-client</artifactId>
+                    <version>${ols-client.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                    <version>${lombok.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.10.1</version>
+                        <configuration>
+                            <annotationProcessorPaths>
+                                <path>
+                                    <groupId>org.projectlombok</groupId>
+                                    <artifactId>lombok</artifactId>
+                                    <version>${lombok.version}</version>
+                                </path>
+                            </annotationProcessorPaths>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <version>2.7.1</version>
+                        <executions>
+                            <execution>
+                                <id>LocalOntologyJsonGenerator</id>
+                                <goals>
+                                    <goal>repackage</goal>
+                                </goals>
+                                <configuration>
+                                    <mainClass>uk.ac.ebi.enfin.mi.score.local.LocalJSONGenerator</mainClass>
+                                    <finalName>local-ontology-json-generator</finalName>
+                                    <classifier>exec</classifier>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 
     <build>
         <plugins>
-            <!-- To compile with JDK5.0 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>11</source>
+                    <target>11</target>
+                    <excludes>
+                        <exclude>${path.to.exclude}</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
 
@@ -30,7 +109,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>miscore-javadoc</id>
@@ -41,7 +120,8 @@
                         <configuration>
                             <outputDirectory>${project.build.directory}/miscore/api</outputDirectory>
                             <reportOutputDirectory>${project.build.directory}/miscore/api</reportOutputDirectory>
-
+                            <doclint>none</doclint>
+                            <excludePackageNames>uk.ac.ebi.enfin.mi.score.local</excludePackageNames>
                         </configuration>
                     </execution>
                 </executions>
@@ -50,12 +130,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>3.0.0-M1</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.9.4</version>
+                        <version>1.11.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -79,8 +159,8 @@
                     <!--<noDeploy>true</noDeploy>-->
                 </configuration>
             </plugin>
-
         </plugins>
+
     </build>
 
     <dependencies>
@@ -88,13 +168,13 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.13</version>
+            <version>1.2.17</version>
         </dependency>
         <!-- testing dependency -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>${junit.version}</version>
         </dependency>
         <!-- JSON dependency -->
         <dependency>
@@ -106,56 +186,14 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.8.4</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.4</version>
+            <version>${jackson.version}</version>
         </dependency>
-
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>intact.nexus</id>
-            <name>IntAct Nexus</name>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
-        </repository>
-        <repository>
-            <id>nexus-ebi-release-repo</id>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
-        </repository>
-        <repository>
-            <id>nexus-ebi-snapshot-repo</id>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>intact.nexus</id>
-            <name>IntAct Nexus</name>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
-        </pluginRepository>
-
-    </pluginRepositories>
-
-    <distributionManagement>
-        <!-- EBI repo -->
-        <repository>
-            <id>pst-release</id>
-            <name>EBI Nexus Repository</name>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
-        </repository>
-        <!-- EBI SNAPSHOT repo -->
-        <snapshotRepository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>pst-snapshots</id>
-            <name>EBI Nexus Snapshots Repository</name>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
 </project>
