--- a/miscore-example/pom.xml
+++ b/miscore-example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.ebi.enfin.mi.score</groupId>
         <artifactId>miscore-parent</artifactId>
-        <version>1.4.0-SNAPSHOT</version>
+        <version>1.4.0</version>
     </parent>
 
     <artifactId>miscore-exemple</artifactId>
