--- a/miscore/src/main/resources/log4j.properties
+++ b/miscore/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
     ## Local
-    log4j.rootLogger=ERROR, CONSOLE, TOMCAT
-#    log4j.rootLogger=DEBUG, CONSOLE
+#    log4j.rootLogger=ERROR, CONSOLE, TOMCAT
+    log4j.rootLogger=DEBUG, CONSOLE
 
     ## In Tomcat
     #log4j.rootLogger=ERROR, TOMCAT
