--- a/miscore/pom.xml
+++ b/miscore/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.ebi.enfin.mi.score</groupId>
         <artifactId>miscore-parent</artifactId>
-        <version>1.4.0</version>
+        <version>1.4.1</version>
     </parent>
 
     <artifactId>miscore</artifactId>
@@ -31,7 +31,7 @@
             <id>json-generation</id>
 
             <properties>
-                <ols-client.version>2.13</ols-client.version>
+                <ols-client.version>2.14-SNAPSHOT</ols-client.version>
                 <lombok.version>1.18.24</lombok.version>
                 <path.to.exclude>NO_PATH</path.to.exclude>
             </properties>
